--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1,4 +1,4 @@
-/* Untitled Clean Theme by Valerio Lyndon / Revision 8 */
+/* "Clarity" by Valerio Lyndon / Revision 8 */
 
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 
