--- a/Clarity Theme/Theme.css
+++ b/Clarity Theme/Theme.css
@@ -1,4 +1,4 @@
-/* "Clarity" by Valerio Lyndon / Revision 8 */
+/* "Clarity" by Valerio Lyndon / Revision 9 */
 
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 
@@ -116,6 +116,32 @@ body { background: #efefef; }
 	color: #323232;
 }
 .icon-menu.profile:hover:after {
+	color: #fff;
+}
+
+.icon-menu.quick-add svg {
+	display: none;
+}
+.icon-menu.quick-add:before {
+	content: "\f067";
+	
+	display: inline-block;
+	height: 26px;
+	width: 26px;
+	
+	font-size: 14px;
+	line-height: 26px;
+	color: #323232;
+	text-align: center;
+	white-space: nowrap;
+	font-family: FontAwesome;
+	
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+.icon-menu.quick-add:hover:before {
 	color: #fff;
 }
 
@@ -428,7 +454,7 @@ body { background: #efefef; }
 	height: 100%;
 	padding: 0;
 	margin: 0 auto;
-	background: url(http://i.imgur.com/tg0I0B7.png) no-repeat right center / contain;
+	background: url(http://i.imgur.com/is2e80Q.png) no-repeat right center / contain;
 }
 #cover-image-container .image-container { padding: 0 }
 .cover-block:before {
